# hyfetcher

./: .gitignore  Cargo.toml  README.md  README_CN.md  build.sh
.github/workflows/: release.yml
data/examples/links/: test.csv
data/runoob/服务端/: rust.csv
src/: lib.rs  main.rs  model.rs  utils.rs
src/fetcher/: downloader.rs  image.rs  mod.rs  video.rs
src/parser/: csv_parser.rs  index_builder.rs  mod.rs
