[package]
name = "hyfetcher"
version = "0.1.0"
edition = "2024"
authors = ["Hyperplasma"]
description = "A high-performance, extensible offline website/article downloader and indexer, inspired by Python version."
license = "MIT"
repository = "https://github.com/hyperplasma/hyfetcher"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "blocking", "cookies", "multipart", "native-tls"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.5"
scraper = "0.18"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
tokio-stream = "0.1"
url = "2.5"
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }

chromiumoxide = { version = "0.5", optional = true } # Chromium headless browser automation
regex = "1.11.1"
# headless_chrome = { version = "1.0", optional = true }

[features]
default = []
js_render = ["chromiumoxide"]

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"
